# wandering-rag-mcp

./: .gitignore  README.md  README_CN.md  pyproject.toml  server.py
api/: app.py
core/: chunker.py  embeddings.py  reranker.py  service.py  vector_store.py
deploy/: README.md  install.sh  prepare.sh  run.sh  setup.sh
docs/: architecture.md
repowiki/: ai-models.md  chunking.md  first_module_tree.json  interfaces.md  mcp-server.md  metadata.json  overview.md  rag-core.md  rest-api.md  service.md  vector-store.md
repowiki/temp/dependency_graphs/: rag_mcp_dependency_graph.json
tests/: TEST_REPORT.md  test_new_features.py
